<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2011 Miguel Ángel López Vicente 
   
     This program is free software: you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
     the Free Software Foundation, either version 3 of the License, or
     (at your option) any later version.
   
     This program is distributed in the hope that it will be useful,
     but WITHOUT ANY WARRANTY; without even the implied warranty of
     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
     GNU General Public License for more details.
   
     You should have received a copy of the GNU General Public License
     along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<resources>
    
<string name="app_name">Anima Calculator</string>
<string name="totaldanio">%1$d%2$c of Damage \n Total: %3$d</string>
<string name="contraataque">Counterattack bonus +%1$d</string>
<string name="ataque">Attack</string>
<string name="ta">AT</string>
<string name="defensa">Defense</string>
<string name="danio">Damage</string>
<string name="defensiva">Defensive</string>
<string name="ceronada">Zero. Nothing happens.</string>
<string name="calcular">Calculate</string>


<string name="modificadores">Bonus or Penaltys</string>
<string name="abierta">Open rolls</string>
<string name="pifia">Fumbles</string>
<string name="capicua">Palindromic</string>
<string name="lanzar">Roll</string>
<string name="usar">Use</string>
<string name="log">Log:</string>
<string name="tirada">Roll</string>
<string name="tirada_resultado">The roll is %1$d</string>
<string name="tirada_abierta">It\'s an open roll</string>
<string name="tirada_pifia">It\'s a fumble.</string>
<string name="pifia_1">The fumble level is %1$d (%1$d + 15)</string>
<string name="pifia_2">The fumble level is %1$d</string>
<string name="pifia_3">The fumble level is %1$d (%1$d - 15)</string>
<string name="tirada_capicua">It\'s palindromic</string>
<string name="tirada_capicua_si">It\'s palindromic again %1$d -> %2$d. It turns in 100</string>
<string name="tirada_capicua_no">It\'s not palindromic again %1$d -> %2$d</string>
<string name="resultado">Ends up with: %1$d</string>

<string name="bono">Bonus:</string>
<string name="ninguno">None</string>


<string name="modificadoresAtaque">Attack Bonus or Penaltys</string>
<string name="modificadoresDefensa">Defense Bonus or Penaltys</string>

</resources>
