<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2011 Miguel Ángel López Vicente 
   
     This program is free software: you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
     the Free Software Foundation, either version 3 of the License, or
     (at your option) any later version.
   
     This program is distributed in the hope that it will be useful,
     but WITHOUT ANY WARRANTY; without even the implied warranty of
     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
     GNU General Public License for more details.
   
     You should have received a copy of the GNU General Public License
     along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
  	android:baselineAligned="false"
 	android:orientation="vertical"
 	android:layout_width="fill_parent"
	android:layout_height="fill_parent">

	<LinearLayout
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:padding="20dp">
		
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:textSize="30dp"
			android:textStyle="bold"
			android:layout_margin="10dp"
			android:id="@+lanzador/resultado"/>	   						
 	</LinearLayout>
 	
 	<LinearLayout
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
 		android:orientation="horizontal">
 		<CheckBox
			android:checked="true"
 			android:text="@string/abierta" 
 			android:id="@+lanzador/abiertas"
 			android:layout_weight="2"
 			android:layout_width="0px"
 			android:layout_height="wrap_content"
 			/>
 		
 		<EditText
 			android:gravity="right"
 			android:id="@+lanzador/abierta"
 			android:layout_weight="1"
 			android:layout_width="0px"
 			android:layout_height="wrap_content" 
 			/>
 	</LinearLayout>	
 	
 		
	<LinearLayout
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
 		android:orientation="horizontal">
 		<CheckBox
			android:checked="true"
 			android:text="@string/pifia" 
 			android:id="@+lanzador/pifias"
 			android:layout_weight="2"
 			android:layout_width="0px"
 			android:layout_height="wrap_content"
 			/>
 		
 		<EditText
 			android:gravity="right"
 			android:layout_weight="1"
 			android:id="@+lanzador/pifia"
 			android:layout_width="0px"
 			android:layout_height="wrap_content" 
 			/>
 	</LinearLayout>	
 	

	<CheckBox
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:checked="true"
		android:text="@string/capicua"
		android:id="@+lanzador/capicuas"/>	
 		
 
 	<LinearLayout
 		android:layout_width="fill_parent"
 		android:layout_height="0px"
 		android:layout_weight="1"
 		android:orientation="vertical">
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:textSize="20dp"
			android:textStyle="bold"
			android:layout_margin="5dp"
			android:text="@string/log"/>
			
		<ScrollView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			>
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:textSize="15dp"
				android:textStyle="bold"
				android:layout_margin="5dp"
				android:id="@+lanzador/log"/>
			
		</ScrollView>	
 	</LinearLayout>
</LinearLayout>
